<resources>
    <string name="app_name">MedicalAppointments</string>
    <string name="welcome">Welcome!</string>

    <string name="ophthalmologist">Ophthalmologist</string>
    <string name="general_practitioner">General Practitioner</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="dermatologist">Dermatologist</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="surgeon">Surgeon</string>
    <string name="neurologist">Neurologist</string>
    <string name="psychiatrist">Psychiatrist</string>
    <string name="orthopedist">Orthopedist</string>
    <string name="oncologist">Oncologist</string>
    <string name="login">Login</string>
    <string name="go_to_register">Go to register</string>
    <string name="register">Register</string>
    <string name="home_page">Home page</string>
    <string name="write_your_email_here">Write your email here...</string>
    <string name="write_your_password_here">Write your password here...</string>
    <string name="surgery">Surgery</string>
    <string name="video_conference">Video Conference</string>
    <string name="regular">Regular</string>
    <string name="follow_up">Follow-up</string>
    <string name="emergency">Emergency</string>
    <string name="insert_appointment">Insert appointment</string>
    <string name="get_appointment">Get appointment</string>
    <string name="unknown">"Unknown"</string>
    <string name="go_to_users">Go to users</string>
    <string name="go_to_patients">Go to patients</string>
    <string name="go_to_doctors">Go to doctors</string>
    <string name="category">Category</string>
    <string name="patient_name">Patient name</string>
    <string name="label_age">Age: %1$d</string>
    <string name="go_to_appointments">Go to appointments</string>
    <string name="title">Title</string>
    <string name="dd_mm_yyyy_hh_mm">(DD/MM/YYYY) HH:MM</string>
    <string name="additional_notes">Additional notes</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="send_appointment">Send appointment</string>
    <string name="i_am_a_doctor">I am a doctor</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="specialty">Specialty</string>
    <string name="birthdate">Birthdate</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="logout">Logout</string>
    <string name="request_appointment">Request appointment</string>
    <string name="select_specialty">Select Specialty</string>
    <string name="choose_a_doctor">Choose a doctor</string>
    <string name="select_appointment_s_category">Select appointment\'s category</string>
    <string name="cancel_appointment">Cancel appointment</string>
    <string name="date_asc">Date: ASC</string>
    <string name="date_des">Date: DES</string>
    <string name="sort_date">Sort date:</string>
    <string name="reset">Reset</string>
    <string name="view_my_appointments">View my appointments</string>
</resources>