<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    >

        <!--    TITLE   -->
        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:paddingVertical="@dimen/paragraph_space"/>

        <!-- Specialty Label -->
        <TextView
            android:id="@+id/label_specialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_specialty"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp" />

<!--        DOCTOR SPECIALTY SPINNER-->
        <Spinner
            android:id="@+id/spinner_specialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_space"
            android:paddingVertical="@dimen/paragraph_space" />

        <!-- Doctor  Label -->
        <TextView
            android:id="@+id/label_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_doctor"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp" />

        <!--    DOCTOR SPINNER-->
        <Spinner
            android:id="@+id/spinner_doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_space"
            android:paddingVertical="@dimen/paragraph_space" />

        <!-- Appointment category Label -->
        <TextView
            android:id="@+id/label_appointment_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_appointment_s_category"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp" />

        <!--    CATEGORY SPINNER-->
        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_space"
            android:paddingVertical="@dimen/paragraph_space" />



        <!--    DATE SELECTOR -->
        <EditText
            android:id="@+id/et_appointment_datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date_and_time"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:layout_marginTop="@dimen/default_space"
            android:paddingVertical="@dimen/paragraph_space"/>


<!--    OPTIONAL DESCRIPTION    -->
        <EditText
            android:id="@+id/et_appointment_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_notes"
            android:minLines="3"
            android:layout_marginTop="@dimen/default_space"
            android:inputType="textCapSentences|textMultiLine" />

<!--        SUBMIT BUTTON-->
        <Button
            android:id="@+id/btn_submit_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_space"
            android:paddingHorizontal="50dp"
            android:text="@string/send_appointment" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>