<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:id="@+id/lly_header"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="vertical"
        android:padding="@dimen/default_space">

<!--        HOMEPAGE  -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_page"
            android:gravity="center"
            />

<!--        BUTTON TO USERS-->
        <Button
            android:id="@+id/btn_go_to_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_users" />

<!--        BUTTON TO PATIENTS-->
        <Button
            android:id="@+id/btn_go_to_patients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_patients" />

<!--        BUTTON TO DOCTORS-->
        <Button
            android:id="@+id/btn_go_to_doctors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_doctors" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lly_header"
        tools:background="@color/design_default_color_secondary" />


</androidx.constraintlayout.widget.ConstraintLayout>